# scholarai-platform

./: .copilot_skill_match.json  .env.example  .gitignore  AGENTS.md  Air-exhibition-preparations.md  CLAUDE.md  CONTRIBUTING.md  DESIGN_SPEC.md  Elite vs pro for Q1.md  FRONTEND_ENHANCEMENT_PLAN.html  Front-upgrade.html  Front-upgrade.legacy.md  Front-upgrade.md  README.md  SECURITY.md  SECURITY_AUDIT.md  STITCH_PROMPT_PACK.md  docker-compose.yml  opencode.json  package.json  progress.md
.codex/: AGENTS.md
.do/: README.md  app.yaml
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.venv312/: pyvenv.cfg
apps/api/: README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: config.py
backend/: .env.example  Dockerfile  alembic.ini  mlflow.db  requirements.txt  requirements_actual.txt  requirements_current.txt
docs/: PRD.md  README.md  ai_models.md  api_design.md  architecture.md  architecture_diagrams.md  blockchain_design.md  ci_push_workflow_error_report.md  database_schema.md  deployment.md  github_push_ci_sanity_report.md  github_push_failure_report.md  implementation_plan.md.resolved  knowledge_graph.md  phase_status_report.md  research.md  skills.md
frontend/: .dockerignore  .vade-report  CLAUDE.md  Dockerfile  README.md  lint_output.txt  next.config.ts  package-lock.json  package.json
infra/: README.md
scrapers/: README.md
scripts/: docs_governance_check.py
shared/: README.md
tests/: README.md
workers/: README.md  pyproject.toml
workers/app/: celery_app.py
(+583 files in other folders)
